# forsyde-atom

./: .gitignore  .travis.yml  ForSyDe-Atom-MoC-DE.html  ForSyDe-Atom-MoC-Time.html  ForSyDe-Atom-MoC.html  LICENSE  Makefile  README.md  _config.yml  doc-index-36.html  doc-index-47.html  doc-index-60.html  doc-index-61.html  doc-index-A.html  doc-index-B.html  doc-index-C.html  doc-index-E.html  doc-index-F.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-R.html  doc-index-T.html  forsyde-atom.cabal  forsyde-atom.haddock  forsyde-haskell-experimental.cabal  index.html  index.md  mini_ForSyDe-Atom-MoC-CT.html  mini_ForSyDe-Atom-MoC-DE.html  mini_ForSyDe-Atom-MoC-SDF.html  mini_ForSyDe-Atom-MoC-SY.html  mini_ForSyDe-Atom-MoC-Stream.html  mini_ForSyDe-Atom-MoC-Time.html  stack.yaml
_layouts/: haddock.html
_sass/: haddock.scss
_site/: 404.html  acknowledgements.html  index.html  publications.html  setup.html  sitemap.xml
_site/api/: ForSyDe-Atom-ExB-Absent.html  ForSyDe-Atom-ExB.html  ForSyDe-Atom-MoC-CT.html  ForSyDe-Atom-MoC-DE.html  ForSyDe-Atom-MoC-SDF.html  ForSyDe-Atom-MoC-SY.html  ForSyDe-Atom-MoC-Stream.html  ForSyDe-Atom-MoC-Time.html  ForSyDe-Atom-MoC-TimeStamp.html  ForSyDe-Atom-MoC.html  ForSyDe-Atom-Skeleton-Vector.html  ForSyDe-Atom-Skeleton.html  ForSyDe-Atom-Utility-Plot.html  ForSyDe-Atom-Utility-Tuple.html  ForSyDe-Atom-Utility.html  ForSyDe-Atom.html  doc-index-124.html  doc-index-36.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  (+12 more)
api/: ForSyDe-Atom-ExB-Absent.html  ForSyDe-Atom-ExB-Absent.tex  ForSyDe-Atom-ExB.html  ForSyDe-Atom-ExB.tex  ForSyDe-Atom-MoC-CT.html  ForSyDe-Atom-MoC-CT.tex  ForSyDe-Atom-MoC-DE-React.html  ForSyDe-Atom-MoC-DE.html  ForSyDe-Atom-MoC-DE.tex  ForSyDe-Atom-MoC-SDF-BDF.html  ForSyDe-Atom-MoC-SDF-CSDF.html  ForSyDe-Atom-MoC-SDF-SADF.html  ForSyDe-Atom-MoC-SDF.html  ForSyDe-Atom-MoC-SDF.tex  ForSyDe-Atom-MoC-SY-Clocked.html  ForSyDe-Atom-MoC-SY.html  ForSyDe-Atom-MoC-SY.tex  ForSyDe-Atom-MoC-Stream.html  ForSyDe-Atom-MoC-Stream.tex  ForSyDe-Atom-MoC-Time.html  ForSyDe-Atom-MoC-Time.tex  ForSyDe-Atom-MoC-TimeStamp.html  ForSyDe-Atom-MoC-TimeStamp.tex  ForSyDe-Atom-MoC.html  ForSyDe-Atom-MoC.tex  ForSyDe-Atom-Prob-Normal.html  ForSyDe-Atom-Prob-Uniform.html  ForSyDe-Atom-Prob.html  ForSyDe-Atom-Skel-FastVector-Cube.html  ForSyDe-Atom-Skel-FastVector-DSP.html  ForSyDe-Atom-Skel-FastVector-Matrix.html  ForSyDe-Atom-Skel-FastVector.html  ForSyDe-Atom-Skel-Vector-Cube.html  ForSyDe-Atom-Skel-Vector-DSP.html  ForSyDe-Atom-Skel-Vector-Matrix.html  ForSyDe-Atom-Skel-Vector.html  ForSyDe-Atom-Skel.html  ForSyDe-Atom-Skeleton-Vector.html  ForSyDe-Atom-Skeleton-Vector.tex  ForSyDe-Atom-Skeleton.html  (+52 more)
api/src/: ForSyDe-Atom-ExB-Absent.html  ForSyDe-Atom-MoC-CT-Core.html  ForSyDe-Atom-MoC-CT-Lib.html  ForSyDe-Atom-MoC-DE-Core.html  ForSyDe-Atom-MoC-DE-Hybrid.html  ForSyDe-Atom-MoC-DE-Interface.html  ForSyDe-Atom-MoC-SDF-Interface.html  ForSyDe-Atom-MoC-Time.html  ForSyDe-Atom-MoC-TimeStamp.html  ForSyDe-Atom-MoC.html  ForSyDe-Atom-Skeleton-Vector-Core.html  ForSyDe-Atom-Skeleton-Vector-Interface.html  ForSyDe-Atom-Skeleton-Vector-Lib.html  ForSyDe-Atom-Skeleton-Vector.html  ForSyDe-Atom-Skeleton.html  ForSyDe-Atom-Utility-Plot.html  ForSyDe-Atom-Utility.html  ForSyDe.Atom.ExB.Absent.html  ForSyDe.Atom.ExB.html  ForSyDe.Atom.MoC.CT.Core.html  ForSyDe.Atom.MoC.CT.Interface.html  ForSyDe.Atom.MoC.CT.Lib.html  ForSyDe.Atom.MoC.CT.html  ForSyDe.Atom.MoC.DE.Core.html  ForSyDe.Atom.MoC.DE.Hybrid.html  ForSyDe.Atom.MoC.DE.Interface.html  ForSyDe.Atom.MoC.DE.Lib.html  ForSyDe.Atom.MoC.DE.React.Core.html  ForSyDe.Atom.MoC.DE.React.LF.html  ForSyDe.Atom.MoC.DE.React.Lib.html  ForSyDe.Atom.MoC.DE.React.html  ForSyDe.Atom.MoC.DE.html  ForSyDe.Atom.MoC.SDF.BDF.html  ForSyDe.Atom.MoC.SDF.CSDF.html  ForSyDe.Atom.MoC.SDF.Core.html  ForSyDe.Atom.MoC.SDF.Interface.html  ForSyDe.Atom.MoC.SDF.Lib.html  ForSyDe.Atom.MoC.SDF.SADF.html  ForSyDe.Atom.MoC.SDF.SADFDemo.html  ForSyDe.Atom.MoC.SDF.SDF.html  (+35 more)
assets/css/: haddock.scss
assets/images/: moore.tex
assets/js/: navbar-haddock.js
docfiles/: .gitignore  Makefile  eqs-exb.tex  eqs-moc.tex  eqs-skel-vector.tex  eqs-skel.tex  eqs.tex  forsyde-atom-docs.sty  misc.tex  moc-ct.tex  moc-de.tex  moc-sdf.tex  moc-sy.tex  moc.tex  skel-vector-comm.tex  skel-vector-func.tex  skel.tex
docfiles/styles/: ocean.css
examples/: #README#  FFT.lhs  Makefile  de_airports.hs  de_packet_sorter.hs  examples.tex  fft.hs  forsyde-atom.tex  networks_collection.hs  test.hs  test_constructors.hs
examples/latex/: .gitignore  Makefile  examples.tex  ref.bib
includes/: Makefile  generate.sh
includes/figs_orig/: 3-layered-process.tex  atom-form1.tex  atom-form2.tex  comb-formula.tex  comb-graph.tex  ct-comb-graph.tex  ct-constant-graph.tex  ct-delay-graph.tex  ct-example1.tex  ct-generate-graph.tex  de-comb-graph.tex  de-constant-graph.tex  de-delay-graph.tex  de-embedsy-graph.tex  de-example.tex  de-generate-graph.tex  de-mealy-graph.tex  de-moore-graph.tex  de-state-graph.tex  de-stated-graph.tex  de-sync-graph.tex  de-toct-graph.tex  de-tosy-graph.tex  delay-formula.tex  delay-graph.tex  extended-values.tex  layered-model.tex  (+105 more)
pages/: publications.md  setup.md
scripts/: prepare-api
src/: ForSyDe-Atom-MoC-DE-Core.html  ForSyDe-Atom-MoC-SDF-Interface.html  ForSyDe-Atom-MoC-SDF.html  ForSyDe-Atom-MoC-SY-Core.html  ForSyDe-Atom-MoC-SY-Interface.html  ForSyDe-Atom-MoC-Stream.html  ForSyDe-Atom-MoC-Time.html  ForSyDe-Atom-Skeleton-Vector-Lib.html  ForSyDe-Atom-Skeleton-Vector.html  ForSyDe-Atom.html  ForSyDe.hs
tests/: CTTest.hs  DETest.hs  SDFTest.hs  SYTest.hs  TestUtils.hs  Tests.hs  TestsDoc.hs  VectorTest.hs  example.hs
(+172 files in other folders)
