cabal-version:       3.6
name:                forsyde-atom
version:             0.3.2.0
synopsis:            Shallow-embedded DSL for modeling cyber-physical systems 
description:
  This package is a spin-off from the <https://forsyde.github.io/forsyde-shallow/ ForSyDe-Shallow> project, aiming to incorporate a set of novel modeling concepts useful in the design of cyber-physical systems (CPS). Among others, ForSyde-Atom introduces the concept of /layer/ as a disciplined means to seamlessly combine multiple DSLs capturing various behavioral aspects of a CPS, such as timing, distribution, probability, etc. into one unified modeling framework. Currently only four layers are provided, but new layers can be formulated and added following the examples of the existing ones.
  .
  As of today ForSyDe-Atom is only implemented as a (set of) shallow-embedded DSL(s), meaning that it can only be used for the purpose of simulation, behavior tracing and validation.  Its associated formalism however, in theory, could be used a starting point for a formal or rigorous system design methodology, showing potential for other design activities, such as refinement or synthesis. For an overview presentation of the main concepts behind this framework, see @[1]@. For more resources, such as tutorials, user manual or publicatons, visit <https://forsyde.github.io/forsyde-atom/>.
  .
  @[1]@ Ungureanu, G., et. al. , ForSyDe-Atom: Taming complexity in cyber-physical system design with layers, ACM Trans. Des. Autom. Electron. Syst., 2021.
license:             BSD-3-Clause
license-file:        LICENSE
author:              George Ungureanu
maintainer:          https://github.com/ugeorge
copyright:           Copyright (c) 2015-2024, George Ungureanu, KTH/EECS
homepage:            https://forsyde.github.io/forsyde-atom/
category:            EDSL, modeling
build-type:          Simple
tested-with:         GHC==9.6.6
extra-doc-files:     fig/*.png

library
  exposed-modules:   ForSyDe.Atom
                   , ForSyDe.Atom.ExB
                   , ForSyDe.Atom.ExB.Absent
                   , ForSyDe.Atom.MoC
                   , ForSyDe.Atom.MoC.Stream
                   , ForSyDe.Atom.MoC.Time
                   , ForSyDe.Atom.MoC.TimeStamp
                   , ForSyDe.Atom.MoC.SY
                   , ForSyDe.Atom.MoC.SY.Core
                   , ForSyDe.Atom.MoC.SY.Lib
                   , ForSyDe.Atom.MoC.SY.Interface
                   , ForSyDe.Atom.MoC.SY.Hybrid
                   , ForSyDe.Atom.MoC.SY.Clocked
                   , ForSyDe.Atom.MoC.DE
                   , ForSyDe.Atom.MoC.DE.Core
                   , ForSyDe.Atom.MoC.DE.Lib
                   , ForSyDe.Atom.MoC.DE.Interface
                   , ForSyDe.Atom.MoC.DE.Hybrid
                   , ForSyDe.Atom.MoC.DE.React
                   , ForSyDe.Atom.MoC.DE.React.Core
                   , ForSyDe.Atom.MoC.DE.React.Lib
                   , ForSyDe.Atom.MoC.DE.React.LF
                   , ForSyDe.Atom.MoC.CT
                   , ForSyDe.Atom.MoC.CT.Core
                   , ForSyDe.Atom.MoC.CT.Lib
                   , ForSyDe.Atom.MoC.CT.Interface
                   , ForSyDe.Atom.MoC.SDF
                   , ForSyDe.Atom.MoC.SDF.Core
                   , ForSyDe.Atom.MoC.SDF.Interface
                   , ForSyDe.Atom.MoC.SDF.SDF
                   , ForSyDe.Atom.MoC.SDF.SADFDemo
                   , ForSyDe.Atom.MoC.SDF.SADF
                   , ForSyDe.Atom.MoC.SDF.CSDF
                   , ForSyDe.Atom.MoC.SDF.BDF
                   , ForSyDe.Atom.Skel
                   , ForSyDe.Atom.Skel.Vector
                   , ForSyDe.Atom.Skel.Vector.Core
                   , ForSyDe.Atom.Skel.Vector.Lib
                   , ForSyDe.Atom.Skel.Vector.Interface
                   , ForSyDe.Atom.Skel.Vector.Matrix
                   , ForSyDe.Atom.Skel.Vector.Cube
                   , ForSyDe.Atom.Skel.Vector.DSP
                   , ForSyDe.Atom.Skel.FastVector
                   , ForSyDe.Atom.Skel.FastVector.Lib
                   , ForSyDe.Atom.Skel.FastVector.Interface
                   , ForSyDe.Atom.Skel.FastVector.Matrix
                   , ForSyDe.Atom.Skel.FastVector.Cube
                   , ForSyDe.Atom.Skel.FastVector.DSP
                   , ForSyDe.Atom.Prob
                   , ForSyDe.Atom.Prob.Uniform
                   , ForSyDe.Atom.Prob.Normal
                   , ForSyDe.Atom.Utility.Tuple
                   , ForSyDe.Atom.Utility.Plot

  if impl(ghc >= 8.0.0)
    ghc-options:       -Wno-duplicate-exports
  else
    ghc-options:       -fno-warn-duplicate-exports
        
  default-language:  Haskell2010
  other-extensions:  PostfixOperators, FlexibleInstances
  build-depends:     base>=4.6 && <6
                   , numbers >= 3000.2.0.2
                   , time
                   , split
                   , random
                   , normaldistribution
                   , directory >= 1.2.2
                   , process >= 1.2.3

                       -- HUnit,
                       -- QuickCheck,
                       -- process >= 1.4.2.0,
                       -- test-framework,
                       -- test-framework-hunit,
                       -- test-framework-quickcheck2
  hs-source-dirs:    src

-- Test-Suite forsyde-testsuite
--   Type:                exitcode-stdio-1.0
--   Default-Language:    Haskell2010
--   Hs-Source-Dirs:      tests
--   Main-is:             Tests.hs
--   Build-depends:       base>=4.6 && <6, 
--                        forsyde-atom, 
--                        QuickCheck, 
--                        test-framework,
--                        test-framework-hunit,
--                        test-framework-quickcheck2,
--                        HUnit

test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -threaded -isrc
  main-is:          tests/TestsDoc.hs
  build-depends:    base>=4.6 && <6
                  , numbers >= 3000.2.0.2
                  , doctest >= 0.8
                  , forsyde-atom

                  
source-repository head
  type:     git
  location: https://github.com/forsyde/forsyde-atom.git
  
